--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url(c:/users/manis/Desktop/Coding_stuff/hangman-game/assets/images/restaurant.png);
+	background-image: url(hangman-game/assets/images/restaurant.png);
 }
 
 .panel-default>.panel-heading {
@@ -12,5 +12,5 @@ body {
 }
 
 .panel-body {
-	background-image: url(c:/users/manis/Desktop/Coding_stuff/hangman-game/assets/images/paisley.png);
+	background-image: url(hangman-game/assets/images/paisley.png);
 }
