--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,7 @@
-body {
-	background-image: url(../images/restaurant.png);
+[id^=underscore] {
+    margin-right: 1px;
 }
 
-.panel-default>.panel-heading {
-	background-color: #c80d4a;
-	color: #d1ded2;
-	margin-top: 0;
-	margin-bottom: 0;
-	padding-top: 30px;
-	padding-bottom: 20px;
-}
-
-.panel-body {
-	background-image: url(../images/paisley.png);
+.hide {
+    display: none;
 }
